--- a/fapi/requirements.txt
+++ b/fapi/requirements.txt
@@ -5,6 +5,7 @@ uvicorn[standard]==0.34.*
 sqlmodel==0.0.24
 sqlalchemy==2.0.40
 alembic==1.15.*
+black
 pydantic==2.11.*
 requests==2.32.*
 httpie==3.2.*
